service.yaml
# service.yaml
# ──────────────────────────────────────
# Service = Internal load balancer
# Routes traffic to pods
# Same as Kubernetes Service!

apiVersion: v1
kind: Service
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  # Which pods to send traffic to
  selector:
    app: flask-app
    deploymentconfig: flask-app

  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
